# score_inc_os_autosd

./: .gitignore  BUILD  MODULE.bazel  README.md  versions.json
.github/workflows/: build_and_test_autosd.yml  generate-toolchain.yml
main/: genindex.html  index.html  search.html
os_images/: image.aib.yml
os_images/files/orchestrator/: holden-agent.service
pr-1/: index.html  search.html
pr-3/: genindex.html  index.html
reference_integration/: BUILD  MODULE.bazel  build-rpms.sh  score_toolchains.MODULE.bazel
reference_integration/demos/holden/: BUILD.bazel  orchestrator.c
reference_integration/demos/persistency/: kvs_demo.cpp  simple_demo.sh
rpm/: BUILD.bazel  MODULE.bazel  defs.bzl
rpm/private/: rpm_rule.bzl
rpm/private/templates/: build_rpm.sh.tpl  stage_files.sh.tpl
rpm/toolchain/: BUILD.bazel  rpm_toolchain.bzl
tests/: .gitignore  BUILD  MODULE.bazel  README.md  build-rpms.sh  score_modules.MODULE.bazel  score_toolchains.MODULE.bazel
tests/demos/holden/: agent.c  protocol.c  protocol.h
tests/demos/persistency/: BUILD.bazel
toolchain/: BUILD.bazel  README.md
toolchain/autosd_10_gcc/: extensions.bzl  setup_toolchain.sh
toolchain/common/: setup_toolchain.sh  toolchain_utils.bzl
toolchain/rpm/: README.md
toolchain/rpm/private/: BUILD.bazel  rpm_rule.bzl
toolchain/rpm/private/templates/: BUILD.bazel
toolchain/rpm/toolchain/: extensions.bzl
