# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "rules_rpm",
    version = "0.1.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")

rpm_toolchain_ext = use_extension("//toolchain:extensions.bzl", "rpm_toolchain")
use_repo(rpm_toolchain_ext, "rpm_toolchain")

register_toolchains(
    "//toolchain:linux_x86_64",
    "//toolchain:linux_aarch64",
)
