# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load(":rpm_toolchain.bzl", "rpm_toolchain")

package(default_visibility = ["//visibility:public"])

toolchain_type(
    name = "rpm_toolchain_type",
    visibility = ["//visibility:public"],
)

rpm_toolchain(
    name = "linux_x86_64_toolchain",
    rpmbuild = "@rpm_toolchain//:rpmbuild",
)

rpm_toolchain(
    name = "linux_aarch64_toolchain",
    rpmbuild = "@rpm_toolchain//:rpmbuild",
)

toolchain(
    name = "linux_x86_64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":linux_x86_64_toolchain",
    toolchain_type = ":rpm_toolchain_type",
)

toolchain(
    name = "linux_aarch64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":linux_aarch64_toolchain",
    toolchain_type = ":rpm_toolchain_type",
)
