# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
# Shared protocol library
cc_library(
    name = "protocol",
    srcs = ["protocol.c"],
    hdrs = ["protocol.h"],
    visibility = ["//visibility:private"],
)

# Holden agent binary
cc_binary(
    name = "holden-agent",
    srcs = ["agent.c"],
    visibility = ["//visibility:public"],
    deps = [":protocol"],
)

# Holden orchestrator binary
cc_binary(
    name = "holden-orchestrator",
    srcs = ["orchestrator.c"],
    visibility = ["//visibility:public"],
    deps = [":protocol"],
)
