# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
load("@rules_rust//rust:defs.bzl", "rust_binary")

exports_files(["simple_demo.sh"])

cc_binary(
    name = "kvs-cpp-demo",
    srcs = ["kvs_demo.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "@score_persistency//:kvs_cpp",
    ],
)

rust_binary(
    name = "kvs-rust-demo",
    srcs = ["rust_demo.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@score_persistency//src/rust/rust_kvs",
    ],
)
